qdeleteall: Fix warning when using the values(key) overload

BUG: 361489